Added new details on the Hymn-details

--- a/src/app/components/single-hymn-detail/single-hymn-detail.component.html
+++ b/src/app/components/single-hymn-detail/single-hymn-detail.component.html
@@ -1,6 +1,6 @@
   <ion-item lines="none">
     <ion-text>
-      <h3 class="hymn-title">{{ hymn.hymnNumber }} {{ hymn.hymnTitle }}</h3>
+      <!-- <h3 class="hymn-title">{{ hymn.hymnNumber }} {{ hymn.hymnTitle }}</h3> -->
       <div class="verse-container">
         <p *ngFor="let verse of hymn?.verses" class="verse">
           <ng-container *ngIf="verse.includes('Gusubiramo')">
