--- a/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
+++ b/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>{{ hymn.hymnNumber }} - {{ hymn.hymnTitle }}</ion-title>
     <ion-buttons slot="start">
@@ -16,5 +16,40 @@
 </ion-header>
 
 <ion-content id="content" class="hymn-details">
+  <app-single-hymn-detail [hymn]="hymn"></app-single-hymn-detail>
+</ion-content> -->
+<ion-header>
+  <ion-toolbar color="light">
+    <ion-title>{{ hymn.hymnNumber }} - {{ hymn.hymnTitle }}</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button  defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button fill="solid" shape="round" color="light" (click)="openAddToFavoriteModal()">
+        <ion-icon  slot="icon-only" name="heart-outline"></ion-icon>
+      </ion-button>
+      <ion-button fill="solid" shape="round" color="light"  (click)="presentPopover($event)">
+        <ion-icon slot="icon-only" name="ellipsis-horizontal-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content
+    [fullscreen]="true"
+    scrollEvents="true"
+  id="content" class="hymn-details"
+>
+  <div class="header-image" [style.background-image]="getBackgroundImageUrl(hymn.hymnNumber)">
+    <ion-title class="overlay">{{ hymn.hymnTitle }}</ion-title>
+  </div>
+
+  <ion-header collapse="condense" class="ion-no-border">
+        <ion-toolbar>
+            <ion-title size="small">
+        {{ hymn.hymnNumber }} - {{ hymn.hymnTitle }}
+      </ion-title>
+        </ion-toolbar>
+    </ion-header>
   <app-single-hymn-detail [hymn]="hymn"></app-single-hymn-detail>
 </ion-content>
