--- a/src/app/tabnav/tabnav.page.html
+++ b/src/app/tabnav/tabnav.page.html
@@ -1,6 +1,10 @@
 <ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="number">
+        <ion-icon name="keypad-outline"></ion-icon>
+        <ion-label>Number</ion-label>
+      </ion-tab-button>
       <ion-tab-button tab="hymns">
         <ion-icon name="book-outline"></ion-icon>
         <ion-label>Hymns</ion-label>
