Updated Numerical digit keyboard

--- a/src/app/components/number-tab/number-tab.component.html
+++ b/src/app/components/number-tab/number-tab.component.html
@@ -15,8 +15,9 @@
   </ion-header>
   <div class="container">
     <ion-item lines="full" class="hymn-input-item">
-      <ion-label position="floating">Enter Hymn Number</ion-label>
-      <ion-input [(ngModel)]="hymnNumber" (ngModelChange)="onHymnNumberChange()" type="number"></ion-input>
+       <input class="ionic-input" type="text" pattern="[0-9]*" [ngModel]="hymnNumber" (ngModelChange)="onHymnNumberChange($event)" name="hymnNumber" placeholder="Enter Hymn Number">
+
+
     </ion-item>
     <div *ngIf="hymnTitle" class="hymn-title">
       <span *ngFor="let word of words; let i = index">
