--- a/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
+++ b/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
@@ -23,13 +23,13 @@
     </div>
   </div>
 
-  <ion-header collapse="condense" class="ion-no-border">
+  <!-- <ion-header collapse="condense" class="ion-no-border">
     <ion-toolbar>
       <ion-title size="small">
         {{ hymn.hymnNumber }} - {{ hymn.hymnTitle }}
       </ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
 
   <ng-container *ngIf="audioUrl && !audioError">
     <ion-card class="audio-feature-card">
