--- a/src/app/pages/favourite-modal/favourite-modal.page.html
+++ b/src/app/pages/favourite-modal/favourite-modal.page.html
@@ -31,7 +31,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-button expand="block" color="primary" [disabled]="!(favourites.length > 0 || newFavoriteName !== '')"
+  <ion-button expand="block" color="primary" [disabled]="!(selectedFavoriteId || newFavoriteName)"
     (click)="addHymnToFavourite()">Add</ion-button>
-<ion-button expand="block" color="light" (click)="navigateToAllFavorites()">View All Favorites</ion-button>
+  <ion-button expand="block" color="light" (click)="navigateToAllFavorites()">View All Favorites</ion-button>
 </ion-content>
