--- a/src/app/pages/hymn-list/hymn-list.page.html
+++ b/src/app/pages/hymn-list/hymn-list.page.html
@@ -1,51 +1,62 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>Indirimbo za 350
-    </ion-title>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar (ionChange)="handleSearchChange($event)" placeholder="Search by hymn# or title" showCancelButton="always"
-      debounce="300"></ion-searchbar>
+    <ion-title class="ion-text-center">Indirimbo za 350</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header collapse="condense" class="ion-no-border">
     <ion-toolbar>
       <ion-title size="large">Indirimbo za 350</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-searchbar 
+    (ionChange)="handleSearchChange($event)" 
+    placeholder="Search by hymn# or title" 
+    animated
+    class="custom-searchbar"
+  ></ion-searchbar>
+
   <app-recently-viewed-list *ngIf="!isSearching"></app-recently-viewed-list>
-  <ion-item>
-    <ion-label>
-      <h2 class="heading-title">
-        <ion-icon name="list-outline" color="primary"></ion-icon>
-        Hymn List
-      </h2>
-    </ion-label>
-  </ion-item>
-  <ion-list *ngIf="(filteredHymns ) as hymns; else skeleton" [inset]="true">
-    <ion-item color="primary" *ngFor="let hymn of hymns ; trackBy: trackByFn"
-      [routerLink]="['/tabs/hymns', hymn.hymnNumber]" routerLinkActive="router-link-active" (click)="playHapticFeedback()">
-      <ion-label>
-        <h2>{{hymn.hymnNumber}} - {{hymn.hymnTitle}}</h2>
-      </ion-label>
-    </ion-item>
-    <ion-item *ngIf="(filteredHymns )?.length === 0">
-      <ion-label>
-        <h2>No hymns found</h2>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+
+  <div class="section-header" *ngIf="!isSearching">
+    <h2>
+      <ion-icon name="book-outline" color="primary"></ion-icon>
+      All Hymns
+    </h2>
+  </div>
+
+  <ng-container *ngIf="(filteredHymns) as hymns; else skeleton">
+    <ion-list *ngIf="hymns.length > 0; else noResults" lines="none">
+      <ion-item *ngFor="let hymn of hymns; trackBy: trackByFn" 
+                [routerLink]="['/tabs/hymns', hymn.hymnNumber]" 
+                routerLinkActive="router-link-active" 
+                (click)="playHapticFeedback()"
+                class="hymn-item">
+        <ion-label>
+          <h2>{{ hymn.hymnNumber }} - {{ hymn.hymnTitle }}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+
+    <ng-template #noResults>
+      <div class="no-results">
+        <ion-icon name="search-outline" color="medium"></ion-icon>
+        <h2>No results found</h2>
+        <p *ngIf="currentSearchQuery">for "{{ currentSearchQuery }}"</p>
+        <p>Try a different search term</p>
+      </div>
+    </ng-template>
+  </ng-container>
+
   <ng-template #skeleton>
     <ion-list>
-      <ion-item>
-        <ion-skeleton-text [animated]="true" count="10"></ion-skeleton-text>
-      </ion-item>
-      <ion-item>
-        <ion-skeleton-text [animated]="true" count="10"></ion-skeleton-text>
-      </ion-item>
-      <ion-item>
-        <ion-skeleton-text [animated]="true" count="10"></ion-skeleton-text>
+      <ion-item *ngFor="let i of [1,2,3,4,5]" lines="none">
+        <ion-label>
+          <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </ion-label>
       </ion-item>
     </ion-list>
   </ng-template>
